# robot.rs

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  review.yml
cargo-robot/: Cargo.toml
cargo-robot/src/: deploy.rs  logging.rs  main.rs  ssh.rs
libfetch/: build.gradle  config.gradle
nt4_rs/: Cargo.toml  build.rs
nt4_rs/examples/: simple_server.rs
nt4_rs/src/: entry.rs  instance.rs  lib.rs  topic.rs  types.rs
ntcore-rs/: Cargo.toml  build.rs
ntcore-rs-macros/: Cargo.toml
ntcore-rs-macros/src/: lib.rs
ntcore-rs/examples/: poses.rs
ntcore-rs/src/: entry.rs  instance.rs  lib.rs  nt_structs.rs  topic.rs  types.rs
ntcore-rs/tests/: poses.rs
robot-rs/: Cargo.toml  build.rs
robot-rs-build-utils/: Cargo.toml
robot-rs-build-utils/src/: lib.rs
robot-rs-macros/: Cargo.toml
robot-rs-macros/src/: activities.rs  lib.rs
robot-rs-ntcore-sys/: Cargo.toml  HALWrapper.h  build.rs
robot-rs-ntcore-sys/src/: lib.rs
robot-rs-units/: Cargo.toml
robot-rs-units/src/: base.rs  electrical.rs  force.rs  lib.rs  motion.rs  traits.rs
robot-rs-wpilib-sys/: Cargo.toml  HALWrapper.h  build.rs
robot-rs-wpilib-sys/libfetch/: build.gradle  config.gradle
robot-rs-wpilib-sys/src/: calling.rs  lib.rs
robot-rs/examples/: arm.rs  elevator.rs  hello-world.rs  motor-closed-loop.rs  nt-publish.rs
robot-rs/examples/elevator-bot/: elevator.rs  main.rs
robot-rs/src/: ds.rs  lib.rs  sim.rs  start.rs  time.rs  traits.rs
robot-rs/src/activity/: mod.rs
robot-rs/src/actuators/: mod.rs  pwm.rs
robot-rs/src/filters/: binary.rs  diff.rs  feedforward.rs  linear.rs  mod.rs  offset.rs  pid.rs  predictive.rs  transform.rs
robot-rs/src/input/: hid.rs  mod.rs  xbox.rs
robot-rs/src/physics/: mod.rs  motor.rs
robot-rs/src/sensors/: mod.rs
robot-rs/src/systems/: arm.rs  elevator.rs  mod.rs
robot-rs/src/transforms/: binary.rs  cascade.rs  diff.rs  linear.rs  map.rs  mod.rs  offset.rs  pid.rs  predictive.rs  profile.rs  stability.rs  transform.rs
robot-rs/tests/: activity.rs
robot_rs/: Cargo.toml  build.rs
robot_rs/examples/: joystick-motor.rs
robot_rs/examples/async-auto/: drivetrain.rs  elevator.rs  gripper.rs  main.rs
robot_rs/examples/async-elevator/: elevator.rs  main.rs
robot_rs/src/: ds.rs  lib.rs  macros.rs  start.rs  time.rs  types.rs
robot_rs/src/actuators/: mod.rs  motors.rs  pwm.rs
robot_rs/src/behaviours/: mod.rs
robot_rs/src/control/: control_lock.rs  edge_detect.rs  mod.rs  pid.rs
robot_rs/src/input/: hid.rs  mod.rs  xbox.rs
robot_rs/src/models/: dc_motor.rs  mod.rs
robot_rs/src/sensors/: analog.rs  digital.rs  distance.rs  mod.rs
wpilib-hal/: Cargo.toml  HALWrapper.h  WPILIB_LICENSE  build.rs
wpilib-hal/src/: calling.rs  lib.rs
