[package]
name = "ntcore-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
robot-rs-ntcore-sys = { path = "../robot-rs-ntcore-sys" }

[build-dependencies]
robot-rs-build-utils = { path = "../robot-rs-build-utils" }
