[package]
name = "robot-rs-build-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cargo_metadata = "0.18.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
home = "0.5.9"
zip = "0.6.6"
