[package]
name = "robot_rs"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.69"
approx = "0.5.1"
async-trait = "0.1.67"
env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
mockall = "0.11.3"
tokio = "1.26.0"
tokio-scoped = "0.2.0"
wpilib-hal = { path = "../wpilib-hal" }
nt4_rs = { path = "../nt4_rs" }
num-traits = "0.2.15"
strum = { version = "0.24", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.69"
cargo_metadata = "0.15.3"

[dev-dependencies]
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }

[[example]]
name = "async-elevator"